--- a/SitoIUM/css/interface.css
+++ b/SitoIUM/css/interface.css
@@ -1,5 +1,5 @@
 #popup{
-    //display:none; 
+    display:none; 
     position:absolute;
     padding: 5px;
     z-index: 1;
@@ -11,4 +11,17 @@
     border: 1px solid #000;
     color: #000; 
     background-color:rgba(30,144,255,0.5);
+}
+
+#barra{
+    position:absolute;
+    bottom:0;
+    left:0;
+    right:0;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+label{
+    color: white
 }
