--- a/SitoIUM/css/interface.css
+++ b/SitoIUM/css/interface.css
@@ -18,8 +18,8 @@
     bottom:0;
     left:0;
     right:0;
-    margin-left:auto;
-    margin-right:auto;
+    margin-left:200px;
+    margin-right:200px;
 }
 
 label{
